# Wingman

./: .gitignore  .gitmodules  AGENTS.md  ANNOUNCEMENT.md  ATTRIBUTIONS.md  AUDIT_REORG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXLOG.md  LEARNINGS.md  LICENSE  README.md  SECURITY.md
.claude-plugin/: marketplace.json
.claude/commands/: ship-feature.md
.claude/hooks/: session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: audit_finding.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: actionlint.yml  claude-code-review.yml  claude.yml  codeql.yml  evals.yml  install-smoke.yml  validate.yml  version-gate.yml
.jules/: bolt.md
agnostic-boardroom/: .gitignore  README.md  pyproject.toml
agnostic-boardroom/agents/: graph.py  loop.py  model_runner.py  pipeline.py
agnostic-boardroom/agents/boardroom/: cto_evaluator.py
agnostic-boardroom/agents/departments/: engineering_maker.py
agnostic-boardroom/core/: state_schema.py
agnostic-boardroom/db/: connection.py  repository.py  schema.py
agnostic-boardroom/knowledge/: ab_harness.py  skill_router.py  vector_store.py
agnostic-boardroom/mcp_server/: memory_tools.py  server.py
agnostic-boardroom/tests/: test_ab_harness.py  test_db.py  test_end_to_end_dry_run.py  test_graph.py  test_loop_live.py  test_loop_mocked.py  test_mcp_server_live.py  test_memory_tools.py  test_pipeline_wiring.py  test_skill_router.py  test_state_schema.py
docs/: AGENT-ROSTER.md  AGENT-WEAKNESS-BENCHMARK.md  ARCHITECTURE.md  CROSS-USER-LEARNING.md  DATABASE.md  DEMO-CHECKLIST.md  GOVERNANCE.md  HUMAN-TODOS.md  PRD.md  PROJECT.md  REGRESSION-CHECKLIST.md  SKILL-ROSTER.md  SRS.md
docs/audit/: 01-strategic-summary.md  02-operational-assessment.md  03-governance-policy.md  04-architecture-data.md  05-user-flows.md  06-security-compliance.md  07-operational-playbooks.md  08-testing-quality.md  09-artifacts-glossary.md  10-enterprise-architecture-review.md  README.md
docs/wingman/: GAPS.md  architecture-audit-2026-07-15.md  audit-codebase-2026-07-15.md  audit-design-system-gaps-2026-07-15.md  audit-reorg-2026-07-20.md  enhancement-review-2026-07-15.md  retros.md  threat-register-v9-v12.md
evals/: MANIFEST.tsv  README.md  run-headless.mjs
evals/cases/: advisory.md  anti-rationalization.md  api-hallucination.md  architecture.md  bloat-audit.md  boardroom-7-seat.md  boardroom-deep-review.md  boardroom-expand.md  boardroom-gate-rule.md  build.md  code-review.md  (+63 more)
scripts/: check-changelog-entry.mjs  check-fixtures.mjs  check-repo-consistency.mjs  generate-eval-manifest.mjs  parse-wingman-logs.mjs  query-wingman-knowledge.mjs  wingman-health.mjs  wingman-metrics.mjs
simulations/: load_balancer_sim.py  lru_cache_sim.py
(+296 files in other folders)
