[project]
name = "agnostic-boardroom"
version = "0.1.0"
description = "Standalone, agent-agnostic MCP backend rebuild of Wingman's Boardroom/pipeline (experimental, in-progress)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "agno>=2.8",
    "lancedb>=0.34",
    "fastembed>=0.5",
    "tiktoken>=0.13",
    "mcp>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Added in later phases, not installed yet:
#   fastapi, uvicorn   -- if HTTP/SSE transport is needed alongside stdio, or Agno's own AgentOS

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# live_model tests cost real money (headless `claude -p` calls) -- excluded
# from the default run, run explicitly via `pytest -m live_model` when
# Phase 3/4's real behavioral claim needs re-proving.
addopts = "-m 'not live_model'"
markers = [
    "live_model: costs real money via headless `claude -p`; run explicitly, not on every test invocation",
]
